aws/myworkflow/cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  CloudFormation Template for Roman Numerals Converter Application. This template creates Python Flask Web Application on Amazon Linux 2 (ami-033b95fb8079dc481) EC2 Instance with custom security group allowing http connections on port 80 and SSH connection on port 22. Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.
  
Parameters:
  mykey:
    Description: Select Your Key
    Type: AWS::EC2::KeyPair::KeyName
    Default: firstkey
  
Resources:

  RomanNumber:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-033b95fb8079dc481
      InstanceType: t2.micro
      KeyName: !Ref mykey
      SecurityGroupIds:
        - !Ref mySecGroup
      Tags:
        - Key: Name
          Value: !Sub Web Serwer of ${AWS::StackName} Stack
      UserData: !Base64 |
        #!/bin/bash
        yum update -y
        yum install python3 -y
        pip3 install flask
        cd /home/ec2-user
        wget https://raw.githubusercontent.com/MuratYarali/my-projects/main/aws/projects/Project-001-Roman-Numerals-Converter/app.py
        mkdir templates && cd templates
        wget https://raw.githubusercontent.com/MuratYarali/my-projects/main/aws/projects/Project-001-Roman-Numerals-Converter/templates/index.html
        wget https://raw.githubusercontent.com/MuratYarali/my-projects/main/aws/projects/Project-001-Roman-Numerals-Converter/templates/result.html
        cd ..
        python3 app.py

  mySecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Flask Web Server and SSH port to secure reach to my EC2 # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0


Outputs:
  WebsiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt RomanNumber.PublicDnsName
    Description: Roman Numerals Converter Application URL
  
  WebServerPrivateIp:
    Value: !Sub
      - 'Private Ip :${PrivateIp}' 
      - PrivateIp: !GetAtt WebServerHost.PrivateIp
    Description: Project Private Ip
